# bitrise-you.i

./: .gitignore  README.md  index.youi.js  package.json.OLD
youi/: CMakeLists.txt  SourceList.cmake  generate.rb
youi/android/modules/app/: YiModuleDefinition.cmake
